src/isort/snapshots/ruff__isort__tests__order_relative_imports_by_level.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind: UnsortedImports
  location:
    row: 1
    column: 0
  end_location:
    row: 5
    column: 0
  fix:
    location:
      row: 1
      column: 0
    end_location:
      row: 5
      column: 0
    content: "from ..a import a\nfrom ..b import a\nfrom .a import a\nfrom .b import a\n"
    message: Organize imports
  parent: ~

