src/isort/snapshots/ruff__isort__tests__reorder_within_section.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind: UnsortedImports
  location:
    row: 1
    column: 0
  end_location:
    row: 3
    column: 0
  fix:
    location:
      row: 1
      column: 0
    end_location:
      row: 3
      column: 0
    content: "import os\nimport sys\n"
    message: Organize imports
  parent: ~

