src/isort/snapshots/ruff__isort__tests__separate_first_party_imports.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind: UnsortedImports
  location:
    row: 1
    column: 0
  end_location:
    row: 6
    column: 0
  fix:
    location:
      row: 1
      column: 0
    end_location:
      row: 6
      column: 0
    content: "import os\nimport sys\n\nimport numpy as np\n\nimport leading_prefix\nfrom leading_prefix import Class\n"
    message: Organize imports
  parent: ~

