src/isort/snapshots/ruff__isort__tests__separate_future_imports.py.snap
---
source: src/isort/mod.rs
expression: checks
---
- kind: UnsortedImports
  location:
    row: 1
    column: 0
  end_location:
    row: 3
    column: 34
  fix:
    patch:
      content: "from __future__ import annotations\n\nimport os\nimport sys\n"
      location:
        row: 1
        column: 0
      end_location:
        row: 4
        column: 0
    applied: false

